Wed Nov  3 07:47:25 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/irb/ruby-lex.rb (RubyLex#identify_string): parse multiple
	  regex options.  a patch from Heesob Park in [ruby-core:32988].

Sat Oct 30 06:32:52 2010  Tanaka Akira  <akr@fsij.org>

	* test/pathname/test_pathname.rb (TestPathname#test_grpowned?): the
	  group of the created file is inherited from the parent
	  directory on BSDs and MacOS X.  Linux also inherit the group if
	  the setgid bit of the directory is set.  It causes the test fail.
	  fixed by Shota Fukumori.  [ruby-dev:42458]

Fri Oct 29 03:04:16 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_dump): fix expected length. [ruby-core:32935]

Thu Oct 21 15:42:01 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/telnet.rb (Net::Telnet#close): added.
	  patched by Erik Hollensbe [ruby-dev:42260] #3830

Wed Oct 27 18:27:17 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_io.rb (TestIO#pipe): should close write end of pipe
	  before closing read end, to get rid of timing problem.

	* test/ruby/test_io_m17n.rb (TestIO_M17N#pipe): ditto.

Wed Oct 27 13:51:25 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_io.rb (TestIO#pipe): need to propagate exceptions
	  in read/write thread. fix r29541.

	* test/ruby/test_io_m17n.rb (TestIO_M17N#pipe): ditto.

Thu Oct 21 00:05:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_io.rb (TestIO#pipe): get rid of deadlock on pipe.
	  a patch from Tomoyuki Chikanaga at [ruby-dev:42435].  #3970

	* test/ruby/test_io_m17n.rb (TestIO_M17N#pipe): ditto.

Mon Oct 18 10:19:00 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (transport_request): @socket may be nil.
	  patched by Egbert Eich [ruby-core:32829]

Sun Oct 17 10:40:17 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rb_define_{class,module}_id_under): register to be
	  marked, which probably are defined and used internally.
